--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -9,4 +9,28 @@
   h2 {
     @apply text-xl;
   }
+
+  // Style for forms
+  form {
+    @apply container bg-gray-100 shadow border rounded;
+
+    legend {
+      @apply text-xl font-bold;
+    }
+
+    .field {
+      label {
+        @apply px-1 py-2;
+      }
+      input {
+        @apply bg-white border-gray-300 border rounded-sm px-1 py-2;
+        &::placeholder {
+          @apply border-gray-400;
+        }
+        &:focus {
+          @apply outline-none shadow-sm;
+        }
+      }
+    }
+  }
 }
