Updates for Alert Component

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,9 @@
   </head>
   <body class="container justify-center">
     <%= render(NavBarComponent.new(current_user: @current_user)) %>
-    <%# TODO: Required for Devise. Figure out a better way to show flash than this... %>
-    <p class="notice bg-yellow-200 text-black"><%= notice %></p>
-    <p class="alert bg-red-300 text-white font-bold"><%= alert %></p>
+    <% flash.each do |type, msg| %>
+      <%= render(AlertComponent.new(level: flash_type_to_alert_level(type), message: msg)) %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
