--- a/app/views/test/index.html.erb
+++ b/app/views/test/index.html.erb
@@ -2,9 +2,9 @@
   <h1>Heading 1</h1>
   <h2>Heading 2</h2>
   <p>This is regular text.</p>
-  <%= render(AlertComponent.new(level: :error, message: "Error message", dismissable: true)) %>
-  <%= render(AlertComponent.new(level: :warning, message: "Warning message", dismissable: true)) %>
-  <%= render(AlertComponent.new(level: :info, message: "Info message", dismissable: true)) %>
+  <%= render(AlertComponent.new(level: :error, message: "Error message")) %>
+  <%= render(AlertComponent.new(level: :warning, message: "Warning message")) %>
+  <%= render(AlertComponent.new(level: :info, message: "Info message")) %>
 </div>
 <div class="container">
   <form method="POST" action="">
