--- a/app/views/test/index.html.erb
+++ b/app/views/test/index.html.erb
@@ -9,5 +9,9 @@
 <div class="container">
   <form method="POST" action="">
     <legend>Form example</legend>
+
+    <div class="actions">
+      <input type="submit" name="commit" value="Log in" data-disable-with="Log in">
+    </div>
   </form>
 </div>
