Added some fake data for the Test page

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -10,6 +10,10 @@
     @apply text-xl;
   }
 
+  a {
+    @apply text-blue-800 border-blue-800 border-b;
+  }
+
   // Style for forms
   form {
     @apply container bg-gray-100 shadow border rounded;
@@ -19,13 +23,14 @@
     }
 
     div.field {
-      @apply px-2;
+      @apply px-2 mx-1;
 
       label {
         @apply px-1 py-2;
       }
-      input {
-        @apply bg-white border-gray-300 border rounded-sm px-1 py-2;
+      input,
+      textarea {
+        @apply bg-white border-gray-300 border rounded-sm px-1 py-2 w-full lg:w-3/4 xl:w-1/2;
         &::placeholder {
           @apply border-gray-400;
         }
@@ -39,8 +44,14 @@
       @apply mt-2 pb-1 pt-2 px-2 border-t border-black bg-gray-300;
 
       input[type="submit"] {
-        @apply px-1 py-2 bg-green-600 border border-green-900 rounded-md shadow-sm;
+        @apply p-2 bg-green-300 border border-green-900 rounded-md shadow-sm;
       }
+    }
+  }
+
+  nav {
+    a {
+      @apply border-none text-black;
     }
   }
 }
