--- a/app/views/test/index.html.erb
+++ b/app/views/test/index.html.erb
@@ -2,17 +2,30 @@
 <div class="container">
   <h1>Heading 1</h1>
   <h2>Heading 2</h2>
-  <p>This is regular text.</p>
+  <p>This is regular text <a>with an anchor</a>.</p>
   <%= render(AlertComponent.new(level: :error, message: "Error message")) %>
   <%= render(AlertComponent.new(level: :warning, message: "Warning message")) %>
   <%= render(AlertComponent.new(level: :info, message: "Info message")) %>
 </div>
 <div class="container">
+  <%= form_for(@fake, url: test_index_path) do |f| %>
   <form method="POST" action="">
     <legend>Form example</legend>
+    <div class="field">
+      <%= f.label :name %>
+      <%= f.text_field :name, autofocus: true, autocomplete: "Name" %>
+    </div>
+    <div class="field">
+      <%= f.label :email %>
+      <%= f.email_field :email %>
+    </div>
+    <div class="field">
+      <%= f.label :address %>
+      <%= f.text_area :address %>
+    </div>
 
     <div class="actions">
-      <input type="submit" name="commit" value="Log in" data-disable-with="Log in">
+      <%= f.submit "Submit" %>
     </div>
-  </form>
+  <% end # form_for %>
 </div>
