--- a/app/views/test/index.html.erb
+++ b/app/views/test/index.html.erb
@@ -1,5 +1,5 @@
 <%= render(Debug::TailwindBreakpointComponent.new) %>
-<div class="container">
+<div class="container mb-4">
   <h1>Heading 1</h1>
   <h2>Heading 2</h2>
   <p>This is regular text <a>with an anchor</a>.</p>
@@ -9,8 +9,9 @@
 </div>
 <div class="container">
   <%= form_for(@fake, url: test_index_path) do |f| %>
-  <form method="POST" action="">
     <legend>Form example</legend>
+    <%# TODO: Incorporate all https://guides.rubyonrails.org/form_helpers.html %>
+    <%#       https://api.rubyonrails.org/v6.1.3/classes/ActionView/Helpers/FormBuilder.html %>
     <div class="field">
       <%= f.label :name %>
       <%= f.text_field :name, autofocus: true, autocomplete: "Name" %>
