--- a/app/views/theme/index.html.erb
+++ b/app/views/theme/index.html.erb
@@ -8,7 +8,7 @@
   <%= render(AlertComponent.new(level: :info, message: "Info message")) %>
 </div>
 <div class="container">
-  <%= form_for(@fake, url: test_index_path) do |f| %>
+  <%= form_for(@fake, url: theme_index_path) do |f| %>
     <legend>Form example</legend>
     <%# TODO: Incorporate all https://guides.rubyonrails.org/form_helpers.html %>
     <%#       https://api.rubyonrails.org/v6.1.3/classes/ActionView/Helpers/FormBuilder.html %>
