Add some padding for headings

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -4,10 +4,10 @@
 
 @layer base {
   h1 {
-    @apply text-2xl;
+    @apply text-2xl pb-4;
   }
   h2 {
-    @apply text-xl;
+    @apply text-xl pb-3;
   }
 
   a {
