Added breakpoint descriptions

--- a/app/components/debug/tailwind_breakpoint_component.html.erb
+++ b/app/components/debug/tailwind_breakpoint_component.html.erb
@@ -2,8 +2,8 @@
      data-controller="debug--tailwind-breakpoint">
   <p class="float-right" data-debug--tailwind-breakpoint-target="viewPortWidth">?</p>
   <p class="block sm:hidden">&lt;sm</p>
-  <p class="hidden sm:block md:hidden">sm</p>
-  <p class="hidden md:block lg:hidden">md</p>
-  <p class="hidden lg:block xl:hidden">lg</p>
-  <p class="hidden xl:block">xl</p>
+  <p class="hidden sm:block md:hidden">sm: >=640px</p>
+  <p class="hidden md:block lg:hidden">md: >=768px</p>
+  <p class="hidden lg:block xl:hidden">lg: >=1024px</p>
+  <p class="hidden xl:block">xl: >=1280px</p>
 </div>
