--- a/app/components/debug/tailwind_breakpoint_component.html.erb
+++ b/app/components/debug/tailwind_breakpoint_component.html.erb
@@ -1,9 +1,10 @@
-<div class="container br-red-900 text-white sm:bg-green-700 sm:text-gray-200 md:bg-blue-600 md:text-gray-200 lg:bg-indigo-500 lg:text-white xl:bg-pink-400 xl:text-black 2xl:bg-red-600 2xl:text-black"
+<div class="container bg-red-700 text-white sm:bg-indigo-500 sm:text-gray-200 md:bg-purple-500 md:text-gray-200 lg:bg-blue-500 lg:text-white xl:bg-green-400 xl:text-black 2xl:bg-yellow-600 2xl:text-black"
      data-controller="debug--tailwind-breakpoint">
   <p class="float-right" data-debug--tailwind-breakpoint-target="viewPortWidth">?</p>
   <p class="block sm:hidden">&lt;sm</p>
   <p class="hidden sm:block md:hidden">sm: >=640px</p>
   <p class="hidden md:block lg:hidden">md: >=768px</p>
   <p class="hidden lg:block xl:hidden">lg: >=1024px</p>
-  <p class="hidden xl:block">xl: >=1280px</p>
+  <p class="hidden xl:block 2xl:hidden">xl: >=1280px</p>
+  <p class="hidden 2xl:block">2xl: >=1536px</p>
 </div>
