--- a/app/components/nav_bar_component.html.erb
+++ b/app/components/nav_bar_component.html.erb
@@ -1,4 +1,4 @@
-<div class="container w-full bg-gray-300">
+<div class="nav-bar-component container w-full bg-gray-300">
   <nav class="flex flex-row justify-between">
     <div class="items-center justify-between px-4 py-3"">
       <svg style="vertical-align: -0.125em;" fill="currentColor" height="1em" width="1em" viewBox="0 0 512 512" aria-hidden="true" role="img">
@@ -8,12 +8,20 @@
     <div class="pl-0 pr-2 pt-2 pb-3 sm:flex-initial font-extrabold">
       Noosphere
     </div>
-    <ol class="px-2 pt-2 pb-3 sm:flex-1 mr-auto">
+    <ol class="px-2 pt-2 pb-3 sm:flex mr-auto">
+    <% unless Rails.env.production? %>
+      <li><%= link_to('Theme', theme_index_path) %></li>
+    <% end %>
     <% if @is_signed_in %>
       <li><%= link_to('Sign Out', destroy_user_credential_session_path, method: :delete) %></li>
     <% else %>
-      <li><%= link_to 'Sign In', new_user_credential_session_path %></li>
+      <li><%= link_to('Sign In', new_user_credential_session_path) %></li>
     <% end %>
     </ol>
+    <% if @current_user.present? %>
+    <div class="flex flex-col px-2 pt-2 pb-3">
+      <%= @current_user.username %>
+    </div>
+    <% end %>
   </nav>
 </div>
