--- a/app/components/nav_bar_component.html.erb
+++ b/app/components/nav_bar_component.html.erb
@@ -6,7 +6,7 @@
       </svg>
     </div>
     <div class="pl-0 pr-2 pt-2 pb-3 sm:flex-initial font-extrabold">
-      Noosphere
+      <%= link_to('Noosphere', root_path) %>
     </div>
     <ol class="px-2 pt-2 pb-3 sm:flex mr-auto">
     <% unless Rails.env.production? %>
@@ -19,7 +19,7 @@
     <% end %>
     </ol>
     <% if @current_user.present? %>
-    <div class="flex flex-col px-2 pt-2 pb-3">
+    <div class="flex flex-col px-2 pt-2 pb-3 bg-gray-400">
       <%= @current_user.username %>
     </div>
     <% end %>
