Added sidebar for Admin page

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -1,12 +1,12 @@
 <% content_for :main do %>
-<div class="flex flex-row">
-  <div class="side-nav w-64">Side</div>
-  <div class="main">
-    <h2>#Main</h2>
-    <div>
-      <%= yield %>
+  <div class="flex flex-row">
+    <%= render(Admin::SideNavComponent.new(current_user: @current_user)) %>
+    <div class="main">
+      <h2>#Main</h2>
+      <div>
+        <%= yield %>
+      </div>
     </div>
   </div>
-</div>
 <% end %>
 <%= render template: "layouts/application" %>
