--- a/app/views/layouts/system_mailer.html.erb
+++ b/app/views/layouts/system_mailer.html.erb
@@ -3,11 +3,11 @@
   <head>
     <meta http-equiv="Content-Type"
     content="text/html; charset=UTF-8" />
-    <title>Bandar Notification</title>
+    <title>Noosphere Notification</title>
     <style type="text/css"></style>
   </head>
   <body>
-    <h1>Bandar Notification</h1>
+    <h1>Noosphere Notification</h1>
     <% unless Rails.env.production? %>
     <div style="color:red; border: black;">
       Note: non-production account notification.
