--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -1,4 +1,4 @@
-<% content_for :main do %>
+<% content_for :body do %>
   <div class="flex flex-row">
     <%= render(Admin::SideNavComponent.new(current_user: @current_user)) %>
     <div class="main">
