--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,8 +1,5 @@
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
-@import "base";
-
-// Components
-@import "form";
-// @import "components";
+body {
+  margin: 0;
+  padding: 0;
+  justify-content: center;
+}
